# MedFabric

./: .dockerignore  .gitignore  .pylintrc  CONTRIBUTING.md  DOCKER_INSTALLATION_GUIDE.txt  DOCKER_QUICKSTART.md  DOCKER_VERIFICATION_REPORT.md  Dockerfile  MedFabric.sh  PROJECT_CHECKLIST.md  README.md  RULES.md  TODO.md  UserGuide.md  app.Dockerfile  app_state.py  backend.py  comment_all_prints.py  config.toml  conflict.py  credentials.py  ct_opener.py  db.Dockerfile  docker-compose.yaml  docker-compose.yml  evaluation.py  generate_launcher.py  image_session.py  init.py  init_db.py  initialize.sh  load_patients.py  main.py  medfabric.db-shm  medfabric.db-wal  models.py  pyproject.toml  pyproject.toml.backup  pyproject.toml.bak  reference.py  (+11 more)
.streamlit/: config.toml
EDA/: data.md  data.py  database_formation.py  image_eda.py  purge_unnecessary.py  read_eda.py
EDA_public/: patient_metadata.csv
backend/: Dockerfile  about.toml  alembic.ini  pyproject.toml  test.db
depriciated/: app_state.py  init.py  main.py  set_chooser.py  setup.py  users.toml
docker/: Dockerfile  app.Dockerfile  build.sh  clean.sh  db.Dockerfile  docker-compose.dev.yaml  docker-compose.tailscale.yaml  docker-compose.v3.yaml  docker-compose.yaml  install-docker.sh  logs.sh  run-dev.sh  run-prod.sh  setup-env.sh  status.sh  stop.sh  tailscale.Dockerfile
docs/: FEATURE_PROPOSALS.md  RUNNING.md  SYSTEM_DOCUMENTATION.md  THESIS_DOCUMENTATION.md  UserGuide.md  WEB_MIGRATION_DESIGN.md
eda_public_data/: flat_directory.py
electron-app/: index.html  main.js  package-lock.json  package.json
examples/: example.env
exported_data_sets/: datasets.csv
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.ts
in_progress/: CONTRIBUTING.md  PROJECT_CHECKLIST.md  README.md  RULES.md  back_propogate_trying.py  latest_annotation_session_t.py
medfabric/: guide.py  main.py
metadata/: scan_metadata.csv  scan_metadata_backup.csv
pages/: dashboard.py  label.py  login.py  register.py
scripts/: delete.sh  import_dataset_v3.py  initialize.sh  migrate_v2_to_v3.py  post.sh  script.sh  setup_accounts.py  sqlite_to_postgres.py
test/: comment_all_prints.py  re_test.py  test.py
testing_env/: plt_test.py  sample.dcm
tests/: conftest.py  credential_test.py  dataset_test.py  patient_test.py  (+8 more)
(+257 files in other folders)
