[project]
name = "MedFabric"
version = "1.7.0"
description = "A labeling tool for CT scans"
authors = [{ name = "Hung-nd233960", email = "hung1qqo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "medfabric"
version = "1.7.0"
description = "A labeling tool for CT scans"
authors = ["Hung-nd233960 <hung1qqo@gmail.com>"]
packages = [{ include = "medfabric" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-postgresql = "^7.0.2"
pydicom = "^3.0.1"
matplotlib = "^3.10.5"
pandas-stubs = "^2.3.0.250703"
