[project]
name = "medfabric"
version = "2.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "passlib>=1.7.4",
    "psycopg>=3.3.0",
    "pydantic[email]>=2.12.5",
    "pydicom>=3.0.1",
    "pylibjpeg>=2.1.0",
    "pylibjpeg-libjpeg>=2.3.0",
    "pylibjpeg-openjpeg>=2.5.0",
    "pytest>=9.0.1",
    "pytest-postgresql>=7.0.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "types-passlib>=1.7.7.20250602",
]
